--- a/index.html
+++ b/index.html
@@ -17,9 +17,53 @@
 
 </head>
 <body>
-    <header>
+        <!-- SLIDER MENU -->
+        <div class="menu-wrapper">
+            <div class="menu-container">
+                <div class="menu-list">
 
+                </div>
+            </div>
+        </div>
+    <header id="header">
+        <div class="container header">
+            <div class="header__left">
+                <div class="header__left-location">
+                    <p>
+                        Київська , Одеська та Львівська області
+                    </p>
+                </div>
+                <div class="header__left-number">
+                    <a href="">+3800000000</a>
+                    <p>з 8:00 до 23:00 24/7</p>
+                </div>
+            </div>
+            <div class="header__center">
+                <img src="./assets/icons/main-logo.svg" alt="">
+            </div>
+            <div class="header__right">
+                <div class="header__right-social">
+                    <a href="">
+                        <img src="./assets/icons/Telegram.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/Whatsapp.svg" alt="">
+                    </a>
+                </div>
+                <div class="header__right-button">
+                    <a href="">Замовити дзвінок</a>
+                </div>
+                <div class="header__right-burger">
+                    <div class="burger-icon">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
+    
     <main>
         <section id="hero">
 
@@ -49,8 +93,10 @@
                         
                     </form>
                 </div>
-  
             </div>
+        </section>
+        <section id="slider">
+
         </section>
     </main>
 
