--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
 </head>
 <body>
         <!-- SLIDER MENU -->
-        <div class="menu-wrapper">
-            <div class="menu-container">
-                <div class="menu-list">
 
+            <div id="menu" class="menu-container">
+                <div class="menu-list">
+                    <p id="close">close</p>
                 </div>
+                
             </div>
-        </div>
+            <div id="shadow" class="shadow"></div>
+
     <header id="header">
         <div class="container header">
             <div class="header__left">
                 <div class="header__left-location">
                     <p>
-                        Київська , Одеська та Львівська області
+                        Київська , Одеська <br> 
+                        та Львівська області
                     </p>
                 </div>
                 <div class="header__left-number">
-                    <a href="">+3800000000</a>
+                    <a href="tel:+380663604794">+3800000000</a>
                     <p>з 8:00 до 23:00 24/7</p>
                 </div>
             </div>
@@ -51,9 +54,9 @@
                     </a>
                 </div>
                 <div class="header__right-button">
-                    <a href="">Замовити дзвінок</a>
+                    <a class="btn-main" href="">Замовити дзвінок</a>
                 </div>
-                <div class="header__right-burger">
+                <div id="burger" class="header__right-burger">
                     <div class="burger-icon">
                         <div class="line1"></div>
                         <div class="line2"></div>
