--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="hero__top">
                     <h1>Натяжні стелі <br> преміум якості</h1>
                     <p>Якісні стелі від 390 грн/м2 у Київській Одеській <br> та Львівській областях </p>
-                    <div class="hero__top-buttons">
+                    <!-- <div class="hero__top-buttons">
                         <div>
                             <a class="hero__top-oneButton" href="">Оставить заявку</a>
                         </div>
@@ -86,7 +86,7 @@
                             
                         </div>
                        
-                    </div>
+                    </div> -->
                 </div>
                 <div class="hero__bottom">
                     <div class="hero__bottom-item">
