--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
                             <rect x="27.1562" y="20.1488" width="8.32231" height="0.876033" rx="0.438016" transform="rotate(90 27.1562 20.1488)" fill="#090E18"/>
                         </svg>
                         <p>
-                            Без запаху <br>
-                            Без фармальдегіду<br>
-                            Єкологічно чисті
+                            Не жовтіє з часом <br>
+                            Ідеально біла стеля
                         </p>
                     </div>
                     <div class="hero__bottom-item">
@@ -118,9 +117,8 @@
                             <rect x="27.1562" y="20.1488" width="8.32231" height="0.876033" rx="0.438016" transform="rotate(90 27.1562 20.1488)" fill="#090E18"/>
                         </svg>
                         <p>
-                            Без запаху <br>
-                            Без фармальдегіду<br>
-                            Єкологічно чисті
+                            Не просвічуеться <br>
+                            Не провысаэ
                         </p>
                     </div>
                 </div>
