--- a/index.html
+++ b/index.html
@@ -153,10 +153,18 @@
                 </div>
                 <div class="container about">
                     <div class="about__left">
-                        фото
+                        <img class="about__img" src="./assets/icons/about-us.png" alt="about us" width="501" height="383">
                     </div>
                     <div class="about__right">
-                        текст
+                        <p class="about__text">
+                            Услуги грузчиков в городе Екатеринбурге
+                            Рассчитать стоимость
+                        </p>
+                        <p class="about__text">
+                            Услуги грузчиков в городе Екатеринбурге
+                            Рассчитать стоимость
+                        </p>
+                        <a class="about__link" href="#">Детальніше</a>
                     </div>
                 </div>
             </div>
@@ -423,7 +431,8 @@
                 </div>
             </div>
         </section>
-        <section id="slider">
+        <section id="slider" class="slider__bottom">
+
         </section>
     </main>
 
