--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                 </div>
                 <div class="container about">
                     <div class="about__left">
-                        <img class="about__img" src="./assets/icons/about-us.png" alt="about us" width="501" height="383">
+                        <img class="about__img" src="./assets/icons/about-us.png" alt="about us" width="501"
+                            height="383">
                     </div>
                     <div class="about__right">
                         <p class="about__text">
@@ -432,7 +433,44 @@
             </div>
         </section>
         <section id="slider" class="slider__bottom">
-
+            <h3 class="about__title title swiper__bottom-title">НАШІ РОБОТИ</h3>
+            <div class="swiper mySwiper2">
+                <div class="swiper-wrapper swiper__bottom-wrapper">
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="swiper__bottom-img" src="./assets/icons/slider2-img.png" alt="img">
+                    </div>
+                </div>
+                <div class="swiper__bottom-next">
+                    <img src="./assets/icons/next-icon.svg" width="16" height="14" alt="icon">
+                </div>
+                <div class="swiper__bottom-prev">
+                    <img src="./assets/icons/next-icon.svg" width="16" height="14" alt="icon">
+                </div>
+            </div>
         </section>
     </main>
 
