--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
@@ -156,14 +157,23 @@
                     </div>
                     <div class="about__right">
                         <p class="about__text">
-                            Услуги грузчиков в городе Екатеринбурге
-                            Рассчитать стоимость
+                            Мы позаботимся о том, чтобы установка
+                            натяжных потолков не стала для Вас головной болью
                         </p>
-                        <p class="about__text">
-                            Услуги грузчиков в городе Екатеринбурге
-                            Рассчитать стоимость
-                        </p>
-                        <a class="about__link" href="#">Детальніше</a>
+                        <ul class="about__list">
+                            <li class="about__list-item">
+                               <span class="green-text about__list-style">-</span> Оплата работы по факту
+                            </li>
+                            <li class="about__list-item">
+                                <span class="green-text about__list-style">-</span> Работаем без пыли
+                            </li>
+                            <li class="about__list-item">
+                                <span class="green-text about__list-style">-</span> Оплата работы по факту
+                             </li>
+                             <li class="about__list-item">
+                                <span class="green-text about__list-style">-</span> Работаем без пыли
+                             </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -428,6 +438,40 @@
 
                     </form>
                 </div>
+            </div>
+        </section>
+        <section id="steps">
+            <div class="container steps">
+                <h3 class="about__title title">ЭТАПЫ РАБОТЫ</h3>
+                    <div class="steps__items">
+                        <div class="steps__item">
+                            <h5 c>text</h5>
+                            <p>
+                               <span class="green-text">01</span>  Закажите бесплатную консультацию на сайте или позвоните нам прямо сейчас. Мы ответим на все ваши вопросы и предложим выгодную цену.
+                            </p>
+                        </div>
+
+                        <div class="steps__item">
+                            <h5 c>text</h5>
+                            <p>
+                               <span class="green-text">02</span>  Закажите бесплатную консультацию на сайте или позвоните нам прямо сейчас. Мы ответим на все ваши вопросы и предложим выгодную цену.
+                            </p>
+                        </div>
+
+                        <div class="steps__item">
+                            <h5 c>text</h5>
+                            <p>
+                               <span class="green-text">03</span>  Закажите бесплатную консультацию на сайте или позвоните нам прямо сейчас. Мы ответим на все ваши вопросы и предложим выгодную цену.
+                            </p>
+                        </div>
+
+                        <div class="steps__item">
+                            <h5 c>text</h5>
+                            <p>
+                               <span class="green-text">04</span>  Закажите бесплатную консультацию на сайте или позвоните нам прямо сейчас. Мы ответим на все ваши вопросы и предложим выгодную цену.
+                            </p>
+                        </div>
+                    </div>
             </div>
         </section>
         <section id="slider" class="slider__bottom">
