--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                                 
                             </div>
 
-                            <div>
+                            <div class="calc__right-bottomPlus">
                                 <p>
                                     Проводка:
                                 </p>
