--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
     <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 
 <body>
+
+    <!-- CALL WIDGET START-->
+    <div id="rc-phone">
+        <div id="rc-phone-icon" class="fa fa-phone"></div>
+        <form>
+          <p>Перезвоним за 2 минуты!</p>
+          <input type="tel" id="rc-phone-input" name="phone" placeholder="Телефон" maxlength="20">
+          <button type="submit" value="" class="fa fa-phone"></button>                    
+        </form>
+    </div>
+    <!-- CALL WIDGET END-->
     <!-- SLIDER MENU -->
 
     <div id="menu" class="menu-container">
