--- a/index.html
+++ b/index.html
@@ -697,13 +697,15 @@
     <footer id="footer">
         <div class="container">
             <div class="footer">
+
+                
                 <img src="./assets/img/white-logo.svg" alt="">
                 <ul class="footer__nav">
                     <li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link"></a>
+                        <a href="#" class="footer__nav-link">asdasdasdas</a>
                     </li>
                     <li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link"></a>
+                        <a href="#" class="footer__nav-link">asdasdasdas</a>
                     </li>
                     <li class="footer__nav-item">
                         <a href="#" class="footer__nav-link"></a>
