--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="menu" class="menu-container">
         <div class="menu__wrapper">
            
-            <div id="close">
+            <div class="close" id="close">
                 <div class="close-icon">
                     <div class="close-line1"></div>
                     <div class="close-line2"></div>
@@ -50,42 +50,42 @@
                 <ul class="navigation__list">
                     <li class="navigation__list-item">
                         <div class="link-effect"></div>
-                        <a href="" class="navigation__list-link">
+                        <a class="navigation__list-link close">
                             ГЛАВНАЯ
                         </a>
                     </li>
 
                     <li class="navigation__list-item">
                         <div class="link-effect"></div>
-                        <a href="" class="navigation__list-link">
+                        <a class="navigation__list-link close">
                             КАТАЛОГ
                         </a>
                     </li>
 
                     <li class="navigation__list-item">
                         <div class="link-effect"></div>
-                        <a href="" class="navigation__list-link">
+                        <a class="navigation__list-link close">
                             ПОЧЕМУ МЫ?
                         </a>
                     </li>
 
                     <li class="navigation__list-item">
                         <div class="link-effect"></div>
-                        <a href="" class="navigation__list-link">
+                        <a class="navigation__list-link close">
                             ЭТАПЫ И УСЛОВИЯ РАБОТЫ
                         </a>
                     </li>
 
                     <li class="navigation__list-item">
                         <div class="link-effect"></div>
-                        <a href="#calc" class="navigation__list-link">
+                        <a href="#calc" class="navigation__list-link close">
                             КАЛЬКУЛЯТОР ЦЕНЫ ПОТОЛКА
                         </a>
                     </li>
 
                     <li class="navigation__list-item">
                         <div class="link-effect"></div>
-                        <a href="" class="navigation__list-link">
+                        <a class="navigation__list-link close">
                             НАШИ РАБОТЫ
                         </a>
                     </li>
